--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lab on Git & GitHub</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
+  <body>
     <!-- Replace John Doe with your name -->
 
     <p>Hi, I am John Doe, I am a Kalvian.</p>
-
-</body>
-
+    <h1>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad dicta, autem
+      accusamus repellendus voluptatibus libero dolorem provident! Doloribus
+      voluptatum asperiores nostrum tempore, alias laborum quaerat, consequatur
+      dolor, et nobis adipisci.
+    </h1>
+  </body>
 </html>
